tests/semantic/rel_dupl/rel_dupl.dl
// Negative test case for a relation that is defined twice

.type Type

.decl R(typeA:Type, typeB:Type)
.decl R(typeA:Type, typeB:Type)
